@@ -12,6 +12,7 @@ including:
 * [jQuery Mobile](http://www.http://jquerymobile.com/)
 * [underscore](http://documentcloud.github.com/underscore/)
 * [mobiscroll](http://code.google.com/p/mobiscroll/)
+* [Modernizr] (http://www.modernizr.com/)
 
 
 The-M-Project contains concepts of different open source projects
